wanted to add a about me

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <img src="16A6E28A-8134-41BC-95EC-D96098EA574B.JPG" alt="Oghene Ufuoma" width="300" style="margin-right:20px;"/>
 <ol style="font-style: italic;font-size:45px;">Oghene Ufuoma </ol>
 
+<h1>About Me</h1>
+    <ol style="font-family:&#39;Arial&#39;;">Hi there I'm Ufuoma Oghene a final year student at McMaster University</ol>
+    <ol style="font-family:&#39;Arial&#39;;">Hope you can look through my interests, experience, and overall objectives.</ol>
 
 
 
